--- a/README.Rmd
+++ b/README.Rmd
@@ -4,6 +4,11 @@ output: github_document
 
 # meteopisa
 
+<!-- badges: start -->
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+<!-- badges: end -->
+
+
 ## Descripcion
 
 **meteopisa** es un paquete de R creado para trabajar con datos meteorologicos.  
